--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,1 +1,32 @@
-
+<html>
+    <head>
+        <title>
+            Article-one ! Ashish Patidar
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href='/'>Home</a>
+            
+        </div>
+        <hr/>
+        <h3>
+            Hello from Article One
+        </h3>
+        <div>
+        April 27,2018
+        </div>
+        <div>
+            <p>
+            This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.
+        </p>
+        <p>
+            This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.
+        </p><p>
+            This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.
+        </p><p>
+            This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.
+        </p>
+        </div>
+    </body>
+</html>
