--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,6 +3,7 @@
         <title>
             Article-one ! Ashish Patidar
         </title>
+        <meta namw='viewport' content='width=device-width, initial-scale=1'/>
     </head>
     <body>
         <div>
