[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,1 +1,35 @@
 
+<html>
+    <head>
+        <title>
+            Article-one ! Ashish Patidar
+        </title>
+        <meta namw='viewport' content='width=device-width, initial-scale=1'/>
+    </head>
+    <body>
+        <div>
+            <a href='/'>Home</a>
+            
+        </div>
+        <hr/>
+        <h3>
+            Hello from Article One
+        </h3>
+        <div>
+        April 27,2018
+        </div>
+        <div>
+            <p>
+            This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.
+        </p>
+        <p>
+            This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.
+        </p>
+        <p>
+            This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.
+        </p><p>
+            This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.
+        </p>
+        </div>
+    </body>
+</html>
