[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -13,7 +13,7 @@
         </div>
         <hr/>
         <h3>
-            Hello from Article One
+            Hello from Article Two
         </h3>
         <div>
         April 27,2018
