[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -12,7 +12,7 @@
         </div>
         <hr/>
         <h3>
-            Hello from Article One
+            Hello from Article Three
         </h3>
         <div>
         April 27,2018
