--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <div>
+        <div>
             <a href='/'>Home</a>
             
         </div>
@@ -29,7 +30,8 @@
             This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.
         </p><p>
             This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.
-        </p>
+            </p>
+            </div>
         </div>
     </body>
 </html>
