--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,10 +4,20 @@
         <title>
             Article-one ! Ashish Patidar
         </title>
+        <style>
+            .container{
+                max-width: 800 px;
+                margin: 0 auto;
+                color: grey;
+                font-family: sans-serif;
+                padding-left: 20 px;
+                padding-right: 20 px;
+            }
+        </style>
         <meta namw='viewport' content='width=device-width, initial-scale=1'/>
     </head>
     <body>
-        <div>
+        <div class='container'>
         <div>
             <a href='/'>Home</a>
             
