[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -3,9 +3,20 @@
         <title>
             Article-one ! Ashish Patidar
         </title>
+        <style>
+            .container{
+                max-width: 800 px;
+                margin: 0 auto;
+                color: grey;
+                font-family: sans-serif;
+                padding-left: 20 px;
+                padding-right: 20 px;
+            }
+        </style>
         <meta namw='viewport' content='width=device-width, initial-scale=1'/>
     </head>
     <body>
+        <div class='container'>
         <div>
             <a href='/'>Home</a>
             
@@ -30,5 +41,7 @@
             This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.
         </p>
         </div>
+    </div>
     </body>
+    
 </html>
