--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,17 +4,8 @@
         <title>
             Article-one ! Ashish Patidar
         </title>
-        <style>
-            .container{
-                max-width: 800 px;
-                margin: 0 auto;
-                color: grey;
-                font-family: sans-serif;
-                padding-left: 20 px;
-                padding-right: 20 px;
-            }
-        </style>
         <meta namw='viewport' content='width=device-width, initial-scale=1'/>
+    <link href='ui/style.css' rel='stylesheet'>
     </head>
     <body>
         <div class='container'>
