[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,8 +4,11 @@
             Article-one ! Ashish Patidar
         </title>
         <meta namw='viewport' content='width=device-width, initial-scale=1'/>
+    <link href='ui/style.css' rel='stylesheet'>
     </head>
+    
     <body>
+        <div class='container'>
         <div>
             <a href='/'>Home</a>
             
@@ -29,6 +32,7 @@
         </p><p>
             This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.This is content of article one.
         </p>
+        </div>
         </div>
     </body>
 </html>
