--- a/ui/index.html
+++ b/ui/index.html
@@ -15,6 +15,9 @@
 			
 			
         </div>
+        <script>
+            alert('Hi, I am Javascript');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
