--- a/ui/index.html
+++ b/ui/index.html
@@ -7,14 +7,20 @@
         <div  class="center">
             <img id = "madi" src="/ui/madi.png" class="img-medium"/>
         </div>
-        <br>
-        <div id = "main-text" class="center text-big bold">
-            Hi! I am Ashish and this is my first webapp.
-			<h4>I have made some changes.</h4>
-			
-			
-			
+        <hr/>
+        <h3>Personal</h3>
+        <div class ='container'>
+            Hi! I am Ashish Patidar
         </div>
+        <hr/>
+        <h3>Professional</h3>
+        <div class = 'container'>
+            I am an Enginnering Student
+        </div>
+        
+        <br>
+			
+       
         <script>
             alert('Hi, I am Javascript');
         </script>
