--- a/ui/index.html
+++ b/ui/index.html
@@ -20,12 +20,10 @@
         <div class = 'footer'>
             This button <button id = 'counter'> click me!!! </button>has been clicked <span id = 'count'>0</span> times.
         </div>
-        <br>
+        <br/>
 			
-       
-        <script>
-            alert('Hi, I am Javascript');
-        </script>
+    <input type = 'text'  id = 'name' placeholder = 'name'></input>
+    <input type = 'submit' value = 'submit'></input>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
