--- a/ui/index.html
+++ b/ui/index.html
@@ -22,8 +22,8 @@
         </div>
         <br/>
 			
-    <input type = 'text'  id = 'name' placeholder = 'name'></input>
-    <input type = 'submit' value = 'submit' id = 'submit-btn'></input>
+    <input type = 'text'  id = 'name' placeholder = 'name'>
+    <input type = 'submit' value = 'submit' id = 'submit-btn'>
         <ul  id = 'nameList'>
             
             
